Add constructors for first-time creation of Message, Chat, and Request